<resources>
    <string name="app_name">ProQuiz</string>
    <string name="hint">Full Name</string>
    <string name="start">Start Quiz</string>
    <string name="note">Proquiz is a quiz to text the knowledge of a programmer with some simple basic question</string>
    <string name="submit">Submit</string>

    <string name="no1">Question 1</string>
    <string name="question1">Which of this is not a programming language?</string>
    <string name="opta1">Java</string>
    <string name="optb1">C++</string>
    <string name="optc1">Css</string>

    <string name="no2">Question 2</string>
    <string name="question2">What is the full meaning of XML?</string>
    <string name="opta2">Executable Markup Language</string>
    <string name="optb2">Extensible Markup Language</string>
    <string name="optc2">Expection Markup Language</string>

    <string name="no3">Question 3</string>
    <string name="question3">Which of these are type Layout in android development?</string>
    <string name="opta3">LinearLayout</string>
    <string name="optb3">TextLayout</string>
    <string name="optc3">RelativeLayout</string>

    <string name="no4">Question 4</string>
    <string name="question4">What is the full meaning of IDE?</string>
    <string name="input4">answer here</string>

    <string name="no5">Question 5</string>
    <string name="question5">Which of this view is used to add image in android development?</string>
    <string name="opta5">TextView</string>
    <string name="optb5">ImageView</string>
    <string name="optc5">Background</string>

    <string name="no6">Question 6</string>
    <string name="question6">What is the full meaning of URI</string>
    <string name="input6">answer here</string>

    <string name="no7">Question 7</string>
    <string name="question7">Who is the founder of Microsoft?</string>
    <string name="opta7">Larry Page</string>
    <string name="optb7">Mark Zuckerberg</string>
    <string name="optc7">Bill Gates</string>

    <string name="no8">Question 8</string>
    <string name="question8">What is the full meaning of HTTP?</string>
    <string name="input8">answer here</string>

    <string name="no9">Question 9</string>
    <string name="question9">Which one is not a tutor on the Android Basics track on Udacity?</string>
    <string name="opta9">Lyla Fujiwara</string>
    <string name="optb9">Katherine Kuan</string>
    <string name="optc9">Juno Lee</string>

    <string name="no10">Question 10</string>
    <string name="question10">Is Google a browser?</string>
    <string name="opta10">Yes</string>
    <string name="optb10">No</string>

    <string name="javeTxt1">Thanks for taking the quiz</string>
    <string name="javaTxt2">You answered</string>
    <string name="javaTxt3">correctly</string>
    <string name="remark">Remark: </string>
    <string name="javaTxt4">Failed, that was bad</string>
    <string name="javaTxt5">Average, You can do better</string>
    <string name="javaTxt6">BRAVO, go get yourself a coffee</string>
    <string name="result">Result</string>
    <string name="javaTxt7">You Score</string>
    <string name="again">Try Again</string>
    <string name="exit">Exit</string>

</resources>
