<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    tools:context=".QuizActivity"
    android:background="@drawable/mountain">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="textPersonName"
                    android:singleLine="true" />

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/question_1_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/opt_a1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opta1" />

                    <RadioButton
                        android:id="@+id/opt_b1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optb1" />

                    <RadioButton
                        android:id="@+id/opt_c1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optc1" />

                </RadioGroup>

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/question_2_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/opt_a2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opta2" />

                    <RadioButton
                        android:id="@+id/opt_b2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optb2" />

                    <RadioButton
                        android:id="@+id/opt_c2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optc2" />

                </RadioGroup>

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no3"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/opt_a3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/opta3" />

                <CheckBox
                    android:id="@+id/opt_b3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optb3" />

                <CheckBox
                    android:id="@+id/opt_c3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/optc3" />

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no4"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input4"
                    android:inputType="text" />

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no5"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/question_5_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/opt_a5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opta5" />

                    <RadioButton
                        android:id="@+id/opt_b5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optb5" />

                    <RadioButton
                        android:id="@+id/opt_c5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optc5" />

                </RadioGroup>

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no6"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question6"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input6"
                    android:inputType="text" />

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no7"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question7"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/question_7_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/opt_a7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opta7" />

                    <RadioButton
                        android:id="@+id/opt_b7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optb7" />

                    <RadioButton
                        android:id="@+id/opt_c7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optc7" />

                </RadioGroup>

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no8"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question8"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input8"
                    android:inputType="text" />

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no9"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question9"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/question_9_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/opt_a9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opta9" />

                    <RadioButton
                        android:id="@+id/opt_b9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optb9" />

                    <RadioButton
                        android:id="@+id/opt_c9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optc9" />

                </RadioGroup>

            </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/no10"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question10"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/question_10_radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/opt_a10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/opta10" />

                    <RadioButton
                        android:id="@+id/opt_b10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/optb10" />

                </RadioGroup>

            </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:onClick="submit"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/submit"
            android:textColor="#ffffff" />

    </LinearLayout>

</ScrollView>